--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -16,6 +16,14 @@ body {
     background-color: #008080;
 }
 
+.desktop{
+    display: grid;
+    grid-template-columns: repeat(10,100px);
+    grid-template-rows: repeat(8,100px);
+    gap: 20px;
+    grid-auto-flow: column;
+}
+
 #taskbar {
     display: flex;
     align-items: center;
@@ -46,10 +54,14 @@ body {
     flex-direction: column;
     background-color: inherit;
     border: none;
-    position: absolute;
     padding: 10px;
     color: #ffffff;
     text-align: center;
+}
+
+.desktop-icon img{
+    height: 64px;
+    width: 64px;
 }
 
 .desktop-icon:active{
