--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -57,6 +57,7 @@ body {
     padding: 10px;
     color: #ffffff;
     text-align: center;
+    gap: 10px;
 }
 
 .desktop-icon img{
@@ -117,13 +118,10 @@ body {
 
 .window{
     display: none;
-    /* display: flex; */
     flex-direction: column;
     position: absolute;
-    top: 7%;
-    left: 25%;
-    height: 800px;
-    width: 1300px;
+    top: 3%;
+    left: 10%;
     padding: 5px 15px 5px 5px;
     background-color: var(--gray-color);
     border-top: 4px solid#ffffff;
