--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -1,5 +1,6 @@
 :root{
     --gray-color: #c0c0c0;
+    --dark-blue-color: #0001a8;
     overflow: hidden;
 }
 
@@ -117,7 +118,7 @@ body {
 }
 
 .window{
-    display: none;
+    display: flex;
     flex-direction: column;
     position: absolute;
     top: 3%;
@@ -136,7 +137,7 @@ body {
     align-items: center;
     height: 4%;
     width: 100%;
-    background-color: #0001a8;
+    background-color: var(--dark-blue-color);
     padding: 5px;
 }
 
@@ -164,7 +165,36 @@ body {
     width: 30px;
 }
 
-#calc-container{
-    display: none;
-    width: 500px;
+.calc-grid{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(7,1fr);
+    background: #d6d2d2;
+    height: 100%;
+    width: 100%;
+    padding: 5px;
+    margin-top: 10px;
+    gap: 10px;
+}
+
+.calc-grid div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+}
+
+.calc-grid div:last-child{
+    background: var(--dark-blue-color);
+    color: #fff;
+}
+
+#calc-screen{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    justify-content: end;
+    padding-right: 35px;
+    border: 2px solid #000;
+    background: var(--gray-color);
+    font-size: 3em;
 }
