--- a/BreakingBad/style.css
+++ b/BreakingBad/style.css
@@ -13,7 +13,7 @@ div{
     height: 95%;
 }
 
-h1 {
+.quote-text {
     display: flex;
     width: 100%;
     height: 100px;
@@ -47,4 +47,5 @@ h1 {
 #points {
     position: absolute;
     right: 0;
+    z-index: 9999;
 }
