--- a/wordle/keyboard-style.css
+++ b/wordle/keyboard-style.css
@@ -24,3 +24,10 @@
         display: grid;
     }
 }
+
+@media (prefers-color-scheme: light) {
+    .key {
+        color: #000;
+        border: 2px solid #000;
+    }
+}
