--- a/wordle/keyboard-style.css
+++ b/wordle/keyboard-style.css
@@ -8,10 +8,14 @@
 }
 
 .key {
-    font-size: 25px;
+    font-size: 20px;
+    color: #fff;
+    border: 2px solid #fff;
+    border-radius: 7px;
+    background: none;
 }
 
-#delete-btn {
+#send-btn {
     grid-column: span 2;
 }
 
