--- a/claudiavictor/style.css
+++ b/claudiavictor/style.css
@@ -64,8 +64,9 @@ main {
     box-shadow: 0px 5px 0 #9b4467;
 }
 
-#btn-photo:hover {
+#btn-photo:active {
     background: #9b4467;
+    box-shadow: 0px 5px 0 #682e45;
 }
 
 #timer {
@@ -99,11 +100,14 @@ main {
     box-shadow: 0px 15px 0 #dbdbdb;
 }
 
-#btn-close-photo {
+.btn-photo-container {
     position: absolute;
     bottom: 10%;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.btn-photo {
     width: 40px;
     height: 40px;
     margin: 10px;
@@ -112,6 +116,11 @@ main {
     color: #fff;
     background: #ed6ea0;
     box-shadow: 0px 5px 0 #9b4467;
+}
+
+.btn-photo:active {
+    background: #9b4467;
+    box-shadow: 0px 5px 0 #682e45;
 }
 
 @media (min-width: 600px) {
